corrected overflows

--- a/css/about.css
+++ b/css/about.css
@@ -1,12 +1,45 @@
+#products{
+    overflow-x: hidden;
+}
+
+#about{
+    overflow-x: hidden;
+}
+.stage-index{
+    display: flex;
+    font-family: 'Kanit', sans-serif;
+    font-size: 120px;
+    color: grey;
+    align-items: flex-start;
+}
+
+.stage-info{
+    font-family: 'Kanit', sans-serif;
+    color: grey;
+    font-size: 20px;
+}
+
+.info-head, .info-head-trans{
+    font-weight: 800;
+    font-size: 40px;
+}
+
 .about-box{
     position: relative;
     width: 100px;
     height: 70px;
-    background-color: #00796B;
     display: block;
     opacity: 1;
     transform: translateX(0);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 1s ease-in-out;
+    z-index: 0;
+}
+
+.box-outline{
+    position: absolute;
+    width: 100px;
+    height: 70px;
+    background-color: #00796B;
 }
 
 .left-lid{
@@ -35,30 +68,29 @@
 
 }
 
-
-.stage-index{
-    display: flex;
-    font-family: 'Kanit', sans-serif;
-    font-size: 120px;
-    color: grey;
-    align-items: flex-start;
+.seed_packet, .seed_packet2, .dry_packet{
+    position: absolute;
+    height: 40px;
+    z-index: -1;
+    transition: transform 0.5s ease-in-out;
 }
 
-.stage-info{
-    font-family: 'Kanit', sans-serif;
-    color: grey;
-    font-size: 20px;
+.seed_packet{
+    transform: translate(0, -40px);
 }
 
-.info-head, .info-head-trans{
-    font-weight: 800;
-    font-size: 40px;
+.seed_packet2{
+    transform: translate(60px, -40px);
+}
+
+.dry_packet{
+    transform: translate(30px, -50px);
 }
 
 .ship{
     position: relative;
     transform: translate(70vw);
-    transition: transform 0.3s;
+    transition: transform 1s;
 }
 
 .svg-ship{
@@ -143,7 +175,8 @@
 }
 
 .truck{
+    margin-top: 20px;
     position: relative;
     transform: translateX(0);
-    transition: transform 0.5s;
+    transition: transform 1s;
 }
