--- a/css/footer.css
+++ b/css/footer.css
@@ -40,7 +40,6 @@ section#footer{
 
 .footer-distributed .footer-left{
 	width: 40%;
-    padding-left: 20px;
 }
 
 .footer-distributed .footer-left img{
@@ -295,7 +294,6 @@ section#footer{
 		margin-bottom: 40px;
 		text-align: center;
 		align-items: center;
-		padding-left: 0;
 	}
 
 	.footer-distributed .footer-center,
